update media query to 36em fix index on mobile

--- a/presentation/copying-and-mixing-readymade-blocks/index.html
+++ b/presentation/copying-and-mixing-readymade-blocks/index.html
@@ -1025,7 +1025,7 @@
               
                 <p>Go and Talk is a lightweight web design tool running in the browser. It empowers designers and marketers to create presentable pages quickly without coding. It is optimized for mobile devices.</p>
 
-<p>Mixing and copying existing blocks is a great way to get start quickly. You can make changes and explore options available.</p>
+<p>Mixing and copying existing blocks is a great way to get started quickly. You can make changes and explore options available.</p>
 
 <p>If you have completed all the exercises in this tutorial, you should have made the following achievements:</p>
 
@@ -1138,7 +1138,7 @@
           </li>
         
           <li class="pv2 fl">
-            <a href="/#"  class="link ph3 dim ">
+            <a href="/about/"  class="link ph3 dim ">
               About
             </a>
           </li>
