--- a/presentation/exporting-finished-page-for-local-viewing/index.html
+++ b/presentation/exporting-finished-page-for-local-viewing/index.html
@@ -556,6 +556,7 @@
           <div class="pt3 f3 markdown lh-copy nested-links"  >
              <ul>
 <li>Your project folder should have subfolders js, css, images, and should have the static  files (JavaScript, CSS) to view the page locally without internet connection.</li>
+<li>You can download <a href="https://github.com/goandtalk/golden/archive/master.zip">static files</a> and unzip to a folder on your computer.</li>
 <li>The local images used in your presentation should be saved under images folder.</li>
 <li>The images linked from a server will only work with internet connection. You can open the exported file with internet connection, and then save the page as a complete web page. The browser will download the images and save all the resources required under a subfolder.</li>
 </ul>
@@ -889,7 +890,7 @@
           </li>
         
           <li class="pv2 fl">
-            <a href="/#"  class="link ph3 dim ">
+            <a href="/about/"  class="link ph3 dim ">
               About
             </a>
           </li>
