--- a/presentation/starting-a-new-site-project/index.html
+++ b/presentation/starting-a-new-site-project/index.html
@@ -1084,7 +1084,7 @@
           </li>
         
           <li class="pv2 fl">
-            <a href="/#"  class="link ph3 dim ">
+            <a href="/about/"  class="link ph3 dim ">
               About
             </a>
           </li>
