--- a/presentation/customizing-call-to-action-button/index.html
+++ b/presentation/customizing-call-to-action-button/index.html
@@ -913,7 +913,7 @@
           </li>
         
           <li class="pv2 fl">
-            <a href="/#"  class="link ph3 dim ">
+            <a href="/about/"  class="link ph3 dim ">
               About
             </a>
           </li>
