--- a/presentation/exporting-and-importing-data/index.html
+++ b/presentation/exporting-and-importing-data/index.html
@@ -1043,7 +1043,7 @@
           </li>
         
           <li class="pv2 fl">
-            <a href="/#"  class="link ph3 dim ">
+            <a href="/about/"  class="link ph3 dim ">
               About
             </a>
           </li>
