--- a/presentation/inserting-a-section-or-column/index.html
+++ b/presentation/inserting-a-section-or-column/index.html
@@ -1224,7 +1224,7 @@
           </li>
         
           <li class="pv2 fl">
-            <a href="/#"  class="link ph3 dim ">
+            <a href="/about/"  class="link ph3 dim ">
               About
             </a>
           </li>
