select remote image and data source

--- a/presentation/customizing-background-image/index.html
+++ b/presentation/customizing-background-image/index.html
@@ -816,7 +816,7 @@
 
 
 <section 
-  class="alternate gt-mv-on relative flex flex-column mid-gray" ><div class="flex-auto flex flex-column justify-center
+  class="min-vh-100 alternate gt-mv-on relative flex flex-column mid-gray" ><div class="flex-auto flex flex-column justify-center
   bg-white-60
   fadeIn
   
