--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -324,14 +324,14 @@
     
 
     <div class="fa-5x tc primary-color-lighter">
-      <i class="fas fa-paint-roller"
+      <i class="fas fa-th"
       data-fa-mask="fas fa-square" 
        data-fa-transform="shrink-6" 
       ></i>
     </div>
 
     <h1 class="near-black f3">
-      <a href="/tutorial/building-a-marketing-website-from-a-to-z/" class="link primary-color dim">Building a Marketin Website from A to Z</a>
+      <a href="/tutorial/building-a-marketing-website-from-a-to-z/" class="link primary-color dim">Building a marketing website from A to Z</a>
     </h1>
 
     <div class="lh-copy links">
