added description in collection section

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
     
 
     </div>
-    <div class="tc pa2 pa3-ns mb4 f3" >  </div>
+    <div class="tc pa2 pa3-ns mb4 f3" > Have more time on important stuff. </div>
   </div> 
 
 </section>
@@ -1078,7 +1078,7 @@
     
 
     </div>
-    <div class="tc pa2 pa3-ns mb4 f3" >  </div>
+    <div class="tc pa2 pa3-ns mb4 f3" >    </div>
   </div> 
 
 </section>
