--- a/faq/index.html
+++ b/faq/index.html
@@ -498,7 +498,7 @@
     
 
     </div>
-    <div class="tc pa2 pa3-ns mb4 f3" >  </div>
+    <div class="tc pa2 pa3-ns mb4 f3" > Server side rendering is available when you need it. </div>
   </div> 
 
 </section>
@@ -585,7 +585,7 @@
     
 
     </div>
-    <div class="tc pa2 pa3-ns mb4 f3" >  </div>
+    <div class="tc pa2 pa3-ns mb4 f3" > marketing vs transactions </div>
   </div> 
 
 </section>
