--- a/presentation/designing-a-custom-theme/index.html
+++ b/presentation/designing-a-custom-theme/index.html
@@ -534,7 +534,7 @@
     
 
     </div>
-    <div class="tc pa2 pa3-ns mb4 f3" >  </div>
+    <div class="tc pa2 pa3-ns mb4 f3" > Present content with a theme, and  deliver content with templates. </div>
   </div> 
 
 </section>
