--- a/tutorial/index.goandmake.html
+++ b/tutorial/index.goandmake.html
@@ -34,6 +34,15 @@
 section[mv-app].active {
   min-height: 100vh;
 }
+
+.gt-vbar[mv-storage] {
+ opacity: 0.2;
+}
+
+.gt-vbar[mv-storage]:hover, .gt-vbar[mv-storage]:focus {
+ opacity: 1;
+}
+
  
 .mv-pending-edit {
   min-width: 4em;
